# scan2mesh

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md
src/scan2mesh/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  progress.py
src/scan2mesh/processing/: __init__.py  normals.py  postprocess.py  preprocess.py  reconstruct.py
src/scan2mesh/readers/: __init__.py  e57.py  las.py  open3d_formats.py  pts.py  ptx.py
src/scan2mesh/viewer/: __init__.py  app.py  colormaps.py  stats.py
src/scan2mesh/writers/: __init__.py  gltf.py  obj.py  stl.py
tests/: conftest.py  test_pipeline.py  test_processing.py  test_readers.py  test_writers.py
